[package]
name = "catadogs"
version = "0.0.0"
description = "Another Data Catalog for People Who Hate Data Catalogs"
edition = "2021"
keywords = ["storage", "data", "s3", "fs", "azblob"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
clap = { version = "4", features = ["cargo"] }
env_logger = "0.10"
futures = "0.3"
log = "0.4"
opendal = "0.27"
percent-encoding = "2"
sluice = "0.5"
tokio = { version = "1.20", features = ["rt-multi-thread", "macros"] }
